--- a/macros/storytxt.cfg
+++ b/macros/storytxt.cfg
@@ -1,11 +1,16 @@
 #textdomain wesnoth-The_Dark_Hordes
 
-# wmllint: local spelling Kaleon Nati Erzen
-
 #define STORYTXT_INTRO
     [story]
+#ifdef DEBUG
         [part]
-            story= _ "At the great battle at the Stone of Erzen, the brothers Gwiti and Nati Ha’atel showed their skills for the first time: Thinking that their side was losing the battle, they called upon the corpses of former enemies to rise again and fight on their side."
+            music=data/core/sounds/ambient/wardrums.ogg
+            story= _ "Difficulty Debug is for testing by the developer. It corresponds to Normal."
+        [/part]
+#endif
+        [part]
+            music=underground.ogg
+            story= _ "At the great battle at the Stone of Erzen, the brothers Gwiti and Nati Ha’atel showed their skills for the first time: believing that their side was losing the battle, they called upon the corpses of former enemies to rise again and fight on their side."
             {TDH_BIGMAP}
         [/part]
         [part]
@@ -13,10 +18,11 @@
             background=story/landscape-battlefield.webp
         [/part]
         [part]
-            story= _ "The Ha’atel brothers fled. However, they were seized by the Wesnothians not long after. They were clapped in irons, marched onto a ship with no rudder, and sent off to drown in the sea, for the Wesnothians feared that their corpses might only rise again."
+            story= _ "The Ha’atel brothers fled. However, they were seized by the Wesnothians not long after. They were clapped in irons, marched onto the ship with no rudder, and sent off to drown in the sea, for the Wesnothians feared that their corpses might only rise again."
         [/part]
         [part]
-            story= _ "But Fate intervened. The ship carrying Gwiti and Nati was beset by a sudden storm and disintegrated, separating the brothers and washing them both ashore. This was the beginning of the Rise of the Dark Hordes."
+            music=gameplay06.ogg
+            story= _ "But destiny intervened. The ship carrying Gwiti and Nati was beset by the sudden storm and disintegrated, separating the brothers and washing them both ashore. This was the beginning of the Rise of the Dark Hordes."
             {TDH_BIGMAP}
         [/part]
     [/story]
@@ -33,7 +39,8 @@
 #define STORYTXT_SKULL_OF_MORGORATH
     [story]
         [part]
-            story= _ "Still wandering the unknown land, Gwiti entered lands of the Orcs."
+            music=northerners.ogg
+            story= _ "Gwiti continued to explore the wasteland and gradually penetrated into the territory of the orcs. Then several orcish clans stood against him."
             {TDH_BIGMAP}
         [/part]
         [part]
@@ -46,7 +53,7 @@
 #define STORYTXT_MAGES_AND_ELVES
     [story]
         [part]
-            story= _ "Furious at the Skull’s lack of power, Gwiti decided to seize a different artifact, the Book of Crelanu."
+            story= _ "Furious at the lack of power of the skull, Gwiti decided to seize another artifact from his memory, the Book of Crelanu."
             {TDH_BIGMAP}
         [/part]
     [/story]
@@ -55,18 +62,27 @@
 #define STORYTXT_CRELANUS_BOOK
     [story]
         [part]
-            story= _ "According to the journal Gwiti recovered, after the death of Delfador the Great, the tradition was started to entrust the Book with the King’s closest advisor."
+            story= _ "According to the journal recovered by Gwiti, after the death of Delfador the Great, the tradition was started to entrust the Book of Crelanu to one of the closest advisors to the king."
         [/part]
         [part]
-            story= _ "This turned out to be a costly mistake, sparking the greatest undead invasion Wesnoth had ever seen."
+            story= _ "This turned out to be an enormous mistake, sparking the largest undead invasion Wesnoth has ever seen and almost destroying the kingdom."
             background=story/landscape-castle.webp
         [/part]
         [part]
-            story= _ "After this, no mage dared take guardianship of the Book. Instead, they decided to hide Crelanu’s work where none would find it, while spreading rumors that it was guarded in the Tower of Kaleon."
+            story= _ "After then, no mage dared to take guardianship of the book. Instead, they decided to hide the book where none would ever find it, while spreading rumors that it was being guarded in the Tower of Kaleon."
         [/part]
         [part]
-            story= _ "Five centuries later, Gwiti retraced their steps, which led him to a war-torn valley."
+            story= _ "Five centuries later, Gwiti retraced their steps, which led him to one of the war-torn valleys."
             {TDH_BIGMAP}
+        [/part]
+    [/story]
+#enddef
+
+#define STORYTXT_CONFRONTATION
+    [story]
+        [part]
+            music=main_menu.ogg
+            story= _ "However, the march of Gwiti was reported to Wesnoth by one of the scouts who had seen him."
         [/part]
     [/story]
 #enddef
@@ -82,7 +98,8 @@
 #define STORYTXT_UNDERGROUND_RIVER
     [story]
         [part]
-            story= _ "Crossing the pool did not take long and soon the orcs and undead marched on through the damp cave, into the mountain. While the orcs shivered in the magical air, Gwiti spent some time reading the Tome."
+            music=snowfall.ogg
+            story= _ "Crossing the pool did not take long and soon the orcs and undead marched on through the damp cave, into the mountain. While the orcs shivered in the magical air, Gwiti spent some time reading the tome."
         [/part]
     [/story]
 #enddef
@@ -90,8 +107,11 @@
 #define STORYTXT_CAMPAIGN_INTERLUDE
     [story]
         [part]
-            music=legends_of_the_north.ogg
+            music=into_the_shadows.ogg
             story= _ "The orcs and undead easily defended the cave stronghold and when the water subsided, the nagas were driven off or slain, their magical artifact exhausted."
+        [/part]
+        [part]
+            story= _ "And the long months passed..."
         [/part]
     [/story]
 #enddef
@@ -99,7 +119,8 @@
 #define STORYTXT_RETURN_TO_THE_NORTHLANDS
     [story]
         [part]
-            story= _ "Months later, Gwiti finished studying the Tome of Crelanu and departed for where he believed the other half of Morgorath’s skull to be. The orcs, restless without an enemy to fight, eagerly followed."
+            music=northerners.ogg
+            story= _ "Gwiti finished studying the Tome of Crelanu and departed for where he believed the other half of the Skull of Morgorath to be. The orcs, restless without an enemy to fight, eagerly followed."
             {TDH_BIGMAP}
         [/part]
     [/story]
@@ -108,7 +129,7 @@
 #define STORYTXT_AN_ORCISH_COUP
     [story]
         [part]
-            story= _ "Gwiti’s research directed him north, further into the orcish lands. Eventually, he could sense the presence of the skull’s other half. The feeling led him to what appeared to be an orcish capital."
+            story= _ "Research by Gwiti led him north, further into the orcish lands. Eventually, he could sense the presence of the other half of the skull. The feeling led him to what appeared to be an orcish capital."
             {TDH_BIGMAP}
         [/part]
     [/story]
@@ -117,7 +138,7 @@
 #define STORYTXT_ASSAULT_ON_ALDUIN
     [story]
         [part]
-            story= _ "Tanar decided to use the death of the would-be Great Chiefs to subject the local tribes to his own rule. Plans to jointly invade Wesnoth were discussed."
+            story= _ "Tanar decided to use the death of the would-be great chiefs to subject the local tribes to his own rule, and plans for jointly invading Wesnoth were discussed."
             {TDH_BIGMAP}
         [/part]
         [part]
@@ -138,7 +159,23 @@
 #define STORYTXT_AMBUSH
     [story]
         [part]
-            story= _ "Unknown to Gwiti, several magi present on Alduin had survived his attack. Faced with a danger beyond their own ability, they contacted outside help, the slayer of the Necromancer-Emperor."
+            story= _ "Unknown to Gwiti, several magi present on Alduin had survived his attack. Faced with the danger beyond their own ability, they contacted outside help, the slayer of the necromancer-emperor."
+        [/part]
+    [/story]
+#enddef
+
+#define STORYTXT_THE_CROWN_PRINCE
+    [story]
+        [part]
+            story= _ "After defeating Elynia, Gwiti aimed for Weldyn. In the middle of his march route was the city of Dan’Tonk."
+        [/part]
+    [/story]
+#enddef
+
+#define STORYTXT_GLYNS_FOREST
+    [story]
+        [part]
+            story= _ "An unexpected confrontation with Morgorath weakened Gwiti’s forces. He fled to the northeast, deciding to proceed in hiding into Glyn’s Forest."
         [/part]
     [/story]
 #enddef
@@ -154,7 +191,7 @@
             {TDH_BIGMAP}
         [/part]
         [part]
-            story= _ "He spent months evading patrols while trying to build his strength back up. Eventually, he was hunted down by a rather familiar elf."
+            story= _ "He spent months evading patrols while trying to build his strength back up. Eventually, he was hunted down by an elf he recognized."
             {TDH_BIGMAP}
         [/part]
     [/story]
